--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "cd library && npm run lint"
     }
+  },
+  "dependencies": {
+    "@types/node": "^14.14.12",
+    "@types/pg": "^7.14.7",
+    "@types/pg-types": "^1.11.5",
+    "pg": "^8.5.1"
   }
 }
