--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "cd library && npm run lint"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   }
 }
