--- a/example/package.json
+++ b/example/package.json
@@ -8,11 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "dp-orm": "0.3.21",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
-  },
-  "devDependencies": {
-    "dp-orm": "0.1.6"
   }
 }
